EL-2 added transaction type converters and Elements models